--- a/index.css
+++ b/index.css
@@ -1,71 +1,3 @@
-#container{
-    background-color: aqua;
-}
-
-.header{
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid black;
-}
-.logo{
-    width:200px;
-}
-.nav-items{
-    padding: 0px 20px;
-
-}
-.nav-items > ul{
-    font-size: 25px;
-    display: flex;
-    padding: 0px 20px;
-    list-style-type: none;
-
-}
-.nav-items > ul > li
-{
-    padding: 10px;
-    margin: 10px;
-}
-.res-container{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.res-card{
-    width: 200px;
-    height: 350px;
-    padding: 10px;
-    margin: 5px;
-}
-.res-card:hover{
-    cursor: pointer;
-    border: 1px solid black;
-}
-.search{
-    padding: 10px;
-
-}
-.res-logo{
-    width:100%;
-    /* padding: 5px; */
-}
-.cuisines{
-    overflow-wrap: break-word;
-}
-.filter-btn{
-    margin: 10px;
-    cursor: pointer;
-}
-.shimmer-container{
-    display: flex;
-    flex-wrap: wrap;
-}
-.shimmer-card{
-    margin: 20px;
-    width: 200px;
-    height: 300px;
-    background-color: #f0f0f0;
-}
-.filters{
-    display: flex;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
